# moss

./: .dockerignore  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  PRD.md  README.md  SECURITY.md  fly.toml  go.mod  go.sum  moss.go  package-lock.json  package.json  tailwind.config.js  vite.config.mjs
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci-dev.yml  ci-main.yml  ci.yml  moss-chat-tauri-dev.yml  pages.yml  release-dev-tauri.yml  release-main.yml
apps/moss-chat-tauri/: README.md  index.html  package-lock.json  package.json  vite.config.ts
apps/moss-chat-tauri/src-tauri/: Cargo.toml  tauri.conf.json
apps/moss-chat-tauri/src-tauri/capabilities/: default.json
apps/moss-chat-tauri/src-tauri/icons/: icon.icns
apps/moss-chat-tauri/src-tauri/src/: callback_state.rs  chat_protocol.rs  commands.rs  ffi.rs  lib.rs  main.rs  models.rs  runtime_settings.rs  snapshot_view.rs  state.rs
cmd/moss-chat/: README.md  attachments.go  attachments_test.go  calls.go  dialog_stub.go  main.go  (+4 more)
deploy/: Dockerfile  Dockerfile.gateway  Dockerfile.signal  README.md  fly.gateway.toml  fly.signal.toml
docs/: API.md  ARCHITECTURE.md  KNOWN_LIMITATIONS.md  SHARED_INTEGRATION-ADVANCED.md  SHARED_INTEGRATION.md  SPECIFICATION-OPERATIONS.md  SPECIFICATION.md
explorer/: README.md  app.js  index.html  style.css
scripts/: release-notes.sh
site/: CNAME  docs.html  explorer.html  index.html  mosh.html  package-lock.json  package.json  showcase.html
(+281 files in other folders)
